; ModuleID = '/home/carl/AnghaBench/vlc/compat/test/extr_heap.c_test_posix_memalign.c'
source_filename = "/home/carl/AnghaBench/vlc/compat/test/extr_heap.c_test_posix_memalign.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i64)* @test_posix_memalign to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_posix_memalign(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i64, i64* %3, align 8
  %8 = load i64, i64* %4, align 8
  %9 = call i32 @posix_memalign(i8** %5, i64 %7, i64 %8)
  store i32 %9, i32* %6, align 4
  %10 = load i64, i64* %3, align 8
  %11 = icmp uge i64 %10, 8
  br i1 %11, label %12, label %27

12:                                               ; preds = %2
  %13 = load i32, i32* %6, align 4
  %14 = icmp eq i32 %13, 0
  br i1 %14, label %15, label %26

15:                                               ; preds = %12
  %16 = load i8*, i8** %5, align 8
  %17 = ptrtoint i8* %16 to i64
  %18 = load i64, i64* %3, align 8
  %19 = sub i64 %18, 1
  %20 = and i64 %17, %19
  %21 = icmp eq i64 %20, 0
  %22 = zext i1 %21 to i32
  %23 = call i32 @assert(i32 %22)
  %24 = load i8*, i8** %5, align 8
  %25 = call i32 @free(i8* %24)
  br label %26

26:                                               ; preds = %15, %12
  br label %32

27:                                               ; preds = %2
  %28 = load i32, i32* %6, align 4
  %29 = icmp ne i32 %28, 0
  %30 = zext i1 %29 to i32
  %31 = call i32 @assert(i32 %30)
  br label %32

32:                                               ; preds = %27, %26
  ret void
}

declare dso_local i32 @posix_memalign(i8**, i64, i64) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
